--- a/index.html
+++ b/index.html
@@ -71,5 +71,7 @@
     <script src="scripts.js"></script>
 
 </body>
-
+<div class="main-container">
+    <!-- عناصر الصفحة الرئيسية هنا -->
+</div>
 </html>
