--- a/index.html
+++ b/index.html
@@ -1,79 +1,44 @@
 <!DOCTYPE html>
-
-<html lang="en">
-
+<html lang="ar">
 <head>
-
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Manhwa Reader</title>
-
-    <link rel="stylesheet" href="styles.css">
-
+    <title>KH Manga - الصفحة الرئيسية</title>
+    <link rel="stylesheet" href="style.css"> <!-- ربط ملف الـ CSS -->
 </head>
-
 <body>
-
+    <!-- الهيدر بتاع الموقع -->
     <header>
-
-        <h1>Manhwa Reader</h1>
-
+        <div class="logo">
+            <!-- هنا بتحطي اللوجو الخاص بالموقع -->
+            <h1>KH Manga</h1>
+        </div>
         <nav>
-
+            <!-- قائمة الروابط الأساسية -->
             <ul>
-
-                <li><a href="#">Home</a></li>
-
-                <li><a href="#">All Manhwas</a></li>
-
-                <li><a href="#">Genres</a></li>
-
-                <li><a href="#">Contact</a></li>
-
+                <li><a href="#">الرئيسية</a></li>
+                <li><a href="#">المانهوا</a></li>
+                <li><a href="#">فريق العمل</a></li>
+                <li><a href="#">تسجيل الدخول</a></li>
             </ul>
-
         </nav>
-
     </header>
 
-    <main>
+    <!-- محتوى الصفحة الرئيسية -->
+    <div class="content">
+        <h2>مرحبًا بكم في KH Manga</h2>
+        <p>هنا يمكنك قراءة أحدث الفصول المترجمة من المانهوا المفضلة لديك.</p>
 
-        <section class="manhwa-list">
+        <!-- زر إضافة المانهوا (بيظهر ليكي بس) -->
+        <button id="add-manhwa-button" style="display: none;">إضافة مانهوا</button>
+    </div>
 
-            <h2>Latest Releases</h2>
-
-            <div class="manhwa-item">
-
-                <img src="manhwa1.jpg" alt="Manhwa 1">
-
-                <h3>Manhwa Title 1</h3>
-
-                <p>Chapter 1</p>
-
-                <a href="#" class="read-btn">Read Now</a>
-
-            </div>
-
-            <!-- Add more manhwa items as needed -->
-
-        </section>
-
-    </main>
-
+    <!-- الفوتر بتاع الموقع -->
     <footer>
-
-        <p>&copy; 2024 Manhwa Reader. All rights reserved.</p>
-
+        <p>&copy; 2024 KH Manga. كل الحقوق محفوظة.</p>
     </footer>
 
-    <script src="scripts.js"></script>
-
+    <!-- ربط ملف الـ JavaScript -->
+    <script src="script.js"></script>
 </body>
-</html>
-</body>
-<div class="main-container">
-    <!-- عناصر الصفحة الرئيسية هنا -->
-</div>
 </html>
