--- a/index.html
+++ b/index.html
@@ -4,70 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KH Manga - الصفحة الرئيسية</title>
-    <link rel="stylesheet" href="style.css">
-    <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-      import { getAuth, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
-
-      // Your web app's Firebase configuration
-      const firebaseConfig = {
-        apiKey: "AIzaSyDYw9gtJQrHvDKGNV5TroBr0H9I3dPAw0Q",
-        authDomain: "kh-manga.firebaseapp.com",
-        projectId: "kh-manga",
-        storageBucket: "kh-manga.appspot.com",
-        messagingSenderId: "976404474089",
-        appId: "1:976404474089:web:dacfb12fe29b40cad6e878",
-        measurementId: "G-FXJ27GMDRZ"
-      };
-
-      // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
-      const auth = getAuth(app);
-      const provider = new GoogleAuthProvider();
-
-      // Function for Google sign-in
-      async function signInWithGoogle() {
-        try {
-          const result = await signInWithPopup(auth, provider);
-          const user = result.user;
-          console.log('User signed in:', user);
-        } catch (error) {
-          console.error('Error during sign-in:', error);
-        }
-      }
-
-      // Add event listener to login link
-      document.addEventListener('DOMContentLoaded', () => {
-        document.getElementById('login-link').addEventListener('click', (event) => {
-          event.preventDefault();
-          signInWithGoogle();
-        });
-      });
-    </script>
+    <link rel="stylesheet" href="style.css"> <!-- ربط ملف الـ CSS -->
 </head>
 <body>
+    <!-- الهيدر بتاع الموقع -->
     <header>
         <div class="logo">
+            <!-- هنا بتحطي اللوجو الخاص بالموقع -->
             <h1>KH Manga</h1>
         </div>
         <nav>
+            <!-- قائمة الروابط الأساسية -->
             <ul>
                 <li><a href="#">الرئيسية</a></li>
                 <li><a href="#">المانهوا</a></li>
                 <li><a href="#">فريق العمل</a></li>
-                <li><a href="#" id="login-link">تسجيل الدخول</a></li>
+                <li><a href="#" id="login-btn">تسجيل الدخول</a></li> <!-- زر تسجيل الدخول -->
             </ul>
         </nav>
     </header>
 
+    <!-- محتوى الصفحة الرئيسية -->
     <div class="content">
         <h2>مرحبًا بكم في KH Manga</h2>
         <p>هنا يمكنك قراءة أحدث الفصول المترجمة من المانهوا المفضلة لديك.</p>
+
+        <!-- زر إضافة المانهوا (بيظهر ليكي بس) -->
         <button id="add-manhwa-button" style="display: none;">إضافة مانهوا</button>
     </div>
 
+    <!-- الفوتر بتاع الموقع -->
     <footer>
         <p>&copy; 2024 KH Manga. كل الحقوق محفوظة.</p>
     </footer>
+
+    <!-- تضمين Firebase والمكتبات الأخرى -->
+    <script type="module">
+        // استيراد مكتبات Firebase المطلوبة
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+        import { getAuth, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-analytics.js";
+
+        // إعداد Firebase الخاص بالتطبيق
+        const firebaseConfig = {
+            apiKey: "AIzaSyDYw9gtJQrHvDKGNV5TroBr0H9I3dPAw0Q",
+            authDomain: "kh-manga.firebaseapp.com",
+            projectId: "kh-manga",
+            storageBucket: "kh-manga.appspot.com",
+            messagingSenderId: "976404474089",
+            appId: "1:976404474089:web:dacfb12fe29b40cad6e878",
+            measurementId: "G-FXJ27GMDRZ"
+        };
+
+        // تهيئة Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+        const auth = getAuth(app);
+
+        // إعداد تسجيل الدخول باستخدام Google
+        const provider = new GoogleAuthProvider();
+        const loginButton = document.getElementById("login-btn");
+
+        loginButton.addEventListener("click", () => {
+            signInWithPopup(auth, provider)
+                .then((result) => {
+                    const user = result.user;
+                    alert(`مرحبًا ${user.displayName}! تم تسجيل الدخول بنجاح.`);
+                    console.log(user); // يمكنك استخدام هذه المعلومة لمزيد من العمليات
+                })
+                .catch((error) => {
+                    console.error(error);
+                    alert(`حدث خطأ أثناء تسجيل الدخول: ${error.message}`);
+                });
+        });
+    </script>
 </body>
 </html>
