--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <!-- الهيدر بتاع الموقع -->
     <header>
         <div class="logo">
-            <!-- هنا بتحطي اللوجو الخاص بالموقع -->
             <h1>KH Manga</h1>
         </div>
         <nav>
-            <!-- قائمة الروابط الأساسية -->
             <ul>
                 <li><a href="#">الرئيسية</a></li>
                 <li><a href="#">المانهوا</a></li>
@@ -38,7 +36,6 @@
         <p>&copy; 2024 KH Manga. كل الحقوق محفوظة.</p>
     </footer>
 
-    <!-- ربط ملف الـ JavaScript -->
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- ربط ملف الـ JavaScript -->
 </body>
 </html>
