--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
         <h2>مرحبًا بكم في KH Manga</h2>
         <p>هنا يمكنك قراءة أحدث الفصول المترجمة من المانهوا المفضلة لديك.</p>
 
-        <!-- زر إضافة المانهوا (بيظهر ليكي بس) -->
+        <!-- زر إضافة المانهوا -->
         <button id="add-manhwa-button" style="display: none;">إضافة مانهوا</button>
+
+        <!-- نموذج رفع الملفات -->
+        <div id="upload-form" style="display: none;">
+            <input type="file" id="file-input" multiple />
+            <button id="submit-upload">رفع الملفات</button>
+        </div>
     </div>
 
     <!-- الفوتر بتاع الموقع -->
