--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
         <p>&copy; 2024 KH Manga. كل الحقوق محفوظة.</p>
     </footer>
 
+    <div id="upload-modal" class="upload-modal">
+        <div class="upload-modal-content">
+            <span class="close">&times;</span>
+            <h2>رفع مانهوا</h2>
+            <input type="file" id="file-input" />
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
