--- a/index.html
+++ b/index.html
@@ -35,18 +35,21 @@
         <button id="add-manhwa-button">إضافة مانهوا</button>
     </div>
 
-    <!-- الفوتر بتاع الموقع -->
-    <footer>
-        <p>&copy; 2024 KH Manga. كل الحقوق محفوظة.</p>
-    </footer>
-
+    <!-- نافذة منبثقة لرفع الملفات -->
     <div id="upload-modal" class="upload-modal">
         <div class="upload-modal-content">
             <span class="close">&times;</span>
             <h2>رفع مانهوا</h2>
+            <p>الرجاء اختيار ملف (الامتدادات المسموح بها: .zip, .rar, .pdf, .jpeg, .png)</p>
             <input type="file" id="file-input" />
+            <button id="upload-button">رفع الملف</button>
         </div>
     </div>
+
+    <!-- الفوتر بتاع الموقع -->
+    <footer>
+        <p>&copy; 2024 KH Manga. كل الحقوق محفوظة.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
