--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6"></script>
 </body>
 </html>
